<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Клиент</string>
    <string name="button_connect_to_server">Подключиться к серверу</string>
    <string name="button_disconnect_from_server">Отключиться от сервера</string>
    <string name="toast_disconnected_from_server">Клиент отключен от сервера</string>
    <string name="toast_connected_to_server">Подключен к серверу</string>
    <string name="button_read_gestures">Читать жесты</string>
    <string name="button_acc_service_disabled">Для начала работы включите\nСлужбу повторения жестов</string>
    <string name="button_acc_service_enabled">Отключить службу повторения жестов</string>
    <string name="gesture_playing_service_notification_channel_name">Служба повторения жестов</string>
    <string name="gesture_playing_service_notification_channel_description">Уведомления службы повторения жестов</string>
    <string name="gesture_playing_service_duty_notification_title">Служба повторения жестов</string>
    <string name="gesture_playing_service_notification_text_working">работает</string>
    <string name="gesture_playing_service_notification_text_paused">приостановлена</string>
    <string name="gesture_playing_service_action_stop">Остановить</string>
    <string name="gesture_playing_service_action_pause">Приостановить</string>
    <string name="gesture_playing_service_action_resume">Возобновить</string>
    <string name="gesture_playing_service_error">Ошибка: %1$s</string>
    <string name="ktor_client_state_inactive">Ktor-клиент неактивен</string>
    <string name="ktor_client_state_connecting">Ktor-клиент соединяется с сервером</string>
    <string name="ktor_client_state_disconnecting">Ktor-клиент отключается от сервера</string>
    <string name="ktor_client_state_running">Клиент (и сервер) активны</string>
    <string name="ktor_client_server_state_paused">Клиент (и сервер) на паузе</string>
    <string name="ktor_client_state_disconnected">Клиент отключен от сервера</string>
    <string name="ktor_client_state_error">Ошибка Ktor-клиента</string>
    <string name="gesture_playing_service_error_incomplete_server_config">Неполные данные для подключения</string>
    <string name="start_button">Старт</string>
    <string name="pause_button_pause">Отдохнуть</string>
    <string name="pause_button_resume">Продолжить</string>
    <string name="stop_button">Фнинш</string>
    <string name="google_chrome_not_found">Google Chrome не найден</string>
    <string name="config_button">Настройки</string>
    <string name="toast_already_connected">Клиент уже подключен</string>
    <string name="toast_connecting_now">Клиент в процессе подключения</string>
    <string name="toast_disconnecting_now">Клиент в процессе отключения</string>

</resources>