<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ClientFragment"
    android:paddingHorizontal="8dp">

    <Button
        android:id="@+id/accessibilityServiceButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/button_acc_service"
        android:text="@string/button_acc_service_disabled" />


    <Button
        android:id="@+id/configButton"
        style="@style/client_button"
        android:layout_marginBottom="24dp"
        android:text="@string/config_button" />

    <Button
        android:id="@+id/startButton"
        style="@style/client_button"
        android:backgroundTint="@color/button_start"
        android:text="@string/start_button" />

    <Button
        android:id="@+id/pauseButton"
        style="@style/client_button"
        android:backgroundTint="@color/button_pause"
        android:text="@string/pause_button_pause" />

    <Button
        android:id="@+id/finishButton"
        style="@style/client_button"
        android:backgroundTint="@color/button_stop"
        android:text="@string/stop_button" />


    <TextView
        android:id="@+id/clientStateView"
        style="@style/info_view"
        android:layout_marginTop="12dp"
        android:text="@string/ktor_client_state_inactive" />

    <TextView
        android:id="@+id/clientErrorView"
        style="@style/error_view"
        android:textColor="@color/error"
        tools:text="Ошибка Ktor-клиента"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        tools:visibility="visible" />

</LinearLayout>